--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,11 @@ jobs:
       -
         name: Set up Go
         uses: actions/setup-go@v2
+      - 
+        name: Install Snapcraft
+        uses: samuelmeuli/action-snapcraft@v1
+        with:
+          snapcraft_token: ${{ secrets.SNAPCRAFT_TOKEN }}
       -
         name: Release
         uses: goreleaser/goreleaser-action@v2
